// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error HTML Structure should render properly with custom props 1`] = `
<DocumentFragment>
  <div
    align="center"
    class="MuiContainer-root makeStyles-container-50 MuiContainer-maxWidthLg"
  >
    <header />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root makeStyles-logo-51"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2v-2zm0-8h2v6h-2V7zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      SYSTEM ERROR
    </h4>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    />
  </div>
</DocumentFragment>
`;

exports[`Error HTML Structure should render properly with default props 1`] = `
<DocumentFragment>
  <div
    align="center"
    class="MuiContainer-root makeStyles-container-1 MuiContainer-maxWidthLg"
  >
    <header />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root makeStyles-logo-2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2v-2zm0-8h2v6h-2V7zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      PAGE NOT FOUND
    </h4>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    >
      May be the page you are looking for has been removed, or you typed in the wrong URL
    </h6>
  </div>
</DocumentFragment>
`;
